--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 <header class="h-screen flex items-center justify-center text-center p-4 relative overflow-hidden">
     <!-- Video Background - Пожалуйста, замените URL-адрес видео на ваш. -->
     <video id="hero-video" autoplay muted loop playsinline>
-        <source src="4733-179738669.mp4" type="video/mp4">
+        <source src="https://drive.google.com/file/d/1y4GcHyH9vyXWb4FixZAdGGM-iRdlIsK2/view?usp=sharing" type="video/mp4">
         Your browser does not support the video tag.
     </video>
     
@@ -521,3 +521,4 @@
 </script>
 </body>
 </html>
+
