--- a/index.html
+++ b/index.html
@@ -131,10 +131,10 @@
 <!-- Шапка (Hero Section) with Video Background -->
 <header class="h-screen flex items-center justify-center text-center p-4 relative overflow-hidden">
     <!-- Video Background - Пожалуйста, замените URL-адрес видео на ваш. -->
-    <video id="hero-video" autoplay muted loop playsinline>
-        <source src="https://drive.google.com/file/d/1y4GcHyH9vyXWb4FixZAdGGM-iRdlIsK2/view?usp=sharing" type="video/mp4">
-        Your browser does not support the video tag.
-    </video>
+  <video id="hero-video" autoplay muted loop playsinline>
+  <source src="https://drive.google.com/uc?export=download&id=1y4GcHyH9vyXWb4FixZAdGGM-iRdlIsK2" type="video/mp4">
+  Your browser does not support the video tag.
+</video>
     
     <div class="flex items-center justify-between w-full max-w-6xl mx-auto p-6 rounded-2xl space-y-6 fade-in">
         <div class="space-y-6 text-left">
@@ -521,4 +521,5 @@
 </script>
 </body>
 </html>
+
 
