--- a/index.html
+++ b/index.html
@@ -131,10 +131,13 @@
 <!-- Шапка (Hero Section) with Video Background -->
 <header class="h-screen flex items-center justify-center text-center p-4 relative overflow-hidden">
     <!-- Video Background - Пожалуйста, замените URL-адрес видео на ваш. -->
-  <video id="hero-video" autoplay muted loop playsinline>
-  <source src="https://drive.google.com/uc?export=download&id=1y4GcHyH9vyXWb4FixZAdGGM-iRdlIsK2" type="video/mp4">
-  Your browser does not support the video tag.
-</video>
+  <iframe width="560" height="315"
+  src="https://www.youtube.com/embed/4CdryStmMUs?autoplay=1&mute=1&loop=1&playlist=4CdryStmMUs"
+  title="YouTube video player" frameborder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+  allowfullscreen>
+</iframe>
+
     
     <div class="flex items-center justify-between w-full max-w-6xl mx-auto p-6 rounded-2xl space-y-6 fade-in">
         <div class="space-y-6 text-left">
@@ -521,5 +524,6 @@
 </script>
 </body>
 </html>
+
 
 
