--- a/index.html
+++ b/index.html
@@ -131,12 +131,13 @@
 <!-- Шапка (Hero Section) with Video Background -->
 <header class="h-screen flex items-center justify-center text-center p-4 relative overflow-hidden">
     <!-- Video Background - Пожалуйста, замените URL-адрес видео на ваш. -->
-  <iframe width="560" height="315"
-  src="https://www.youtube.com/embed/4CdryStmMUs?autoplay=1&mute=1&loop=1&playlist=4CdryStmMUs"
-  title="YouTube video player" frameborder="0"
-  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-  allowfullscreen>
-</iframe>
+   <div class="video-background">
+    <iframe src="https://www.youtube.com/embed/4CdryStmMUs?autoplay=1&mute=1&loop=1&playlist=4CdryStmMUs&controls=0&showinfo=0&modestbranding=1"
+      frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+      allowfullscreen>
+    </iframe>
+  </div>
 
     
     <div class="flex items-center justify-between w-full max-w-6xl mx-auto p-6 rounded-2xl space-y-6 fade-in">
@@ -524,6 +525,7 @@
 </script>
 </body>
 </html>
+
 
 
 
