--- a/index.html
+++ b/index.html
@@ -40,6 +40,26 @@
         }
 
         /* Hero Section Video */
+        .video-background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: -1;
+  overflow: hidden;
+}
+
+.video-background iframe {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 177.78vh; /* 16:9 */
+  height: 100vh;
+  transform: translate(-50%, -50%);
+  pointer-events: none;
+}
+
         #hero-video {
             position: fixed;
             top: 0;
@@ -131,7 +151,9 @@
 <!-- Шапка (Hero Section) with Video Background -->
 <header class="h-screen flex items-center justify-center text-center p-4 relative overflow-hidden">
     <!-- Video Background - Пожалуйста, замените URL-адрес видео на ваш. -->
-   <div class="video-background">
+ <header class="h-screen flex items-center justify-center text-center p-4 relative overflow-hidden">
+  <!-- Видео-фон YouTube -->
+  <div class="video-background">
     <iframe src="https://www.youtube.com/embed/4CdryStmMUs?autoplay=1&mute=1&loop=1&playlist=4CdryStmMUs&controls=0&showinfo=0&modestbranding=1"
       frameborder="0"
       allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -525,6 +547,7 @@
 </script>
 </body>
 </html>
+
 
 
 
