--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
             </a>
         </div>
         <div class="profile-image-container">
-            <img src="photo_2024-09-30_18-34-58.jpg" alt="Профиль" class="w-[225px] h-[225px] rounded-full border-4 border-white/80 object-cover shadow-2xl">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTQOxDfO4qUx41Cda-UkJITyrtH3P6YdVI3Qg&s" alt="Профиль" class="w-[225px] h-[225px] rounded-full border-4 border-white/80 object-cover shadow-2xl">
         </div>
     </div>
 </header>
@@ -537,5 +537,6 @@
 </script>
 </body>
 </html>
+
 
 
