--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 <header class="h-screen flex items-center justify-center text-center p-4 relative overflow-hidden">
     <!-- Полноэкранный видео-фон YouTube -->
     <div class="video-background">
-        <iframe src="https://www.youtube.com/watch?v=Lpz98bCaE_Aautoplay=1&mute=1&loop=1&playlist=4CdryStmMUs&controls=0&showinfo=0&modestbranding=1&rel=0"
+        <iframe src="https://www.youtube.com/watch?v=Lpz98bCaE_A"
             frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             allowfullscreen>
@@ -537,6 +537,7 @@
 </script>
 </body>
 </html>
+
 
 
 
