--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
     <div class="flex items-center justify-between w-full max-w-6xl mx-auto p-6 rounded-2xl space-y-6 fade-in relative z-10">
         <div class="space-y-6 text-left">
             <h1 class="text-4xl md:text-6xl font-extrabold tracking-tight">
-                <span class="text-white drop-shadow-2xl">МустафоШох</span>
+                <span class="text-white drop-shadow-2xl">Мустафо (Портфлио 2025 феврал )</span>
             </h1>
             <p class="text-lg md:text-2xl text-gray-200 font-medium max-w-2xl drop-shadow-lg">
                 Создаю современные веб-сайты, Telegram-ботов и эффективное продвижение в Instagram.
@@ -537,6 +537,7 @@
 </script>
 </body>
 </html>
+
 
 
 
